[project]
name = "llm-chatbot-python"
version = "0.1.0"
description = "Neo4j GraphAcademy course: Build an LLM-powered chatbot using Python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # LangChain ecosystem (updated to latest stable versions)
    "langchain==0.3.25",
    "langchain-core==0.3.65",
    "langchain-neo4j==0.4.0",
    "langchain-openai==0.3.22",
    "langchain-text-splitters==0.3.8",
    "langchainhub==0.1.21",
    "langsmith==0.3.45",
    # Neo4j
    "neo4j==5.28.1",
    # OpenAI
    "openai==1.86.0",
    "tiktoken==0.9.0",
    # Streamlit (web UI framework)
    "streamlit==1.51.0",
    # Utilities
    "tenacity==9.1.2",
    "pydantic==2.11.5",
    "python-dotenv==1.1.0",
    "watchdog>=6.0.0",
]

# PEP 735 dependency groups (preferred over [project.optional-dependencies] for dev tools)
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.14.10",
    "ty>=0.0.8",
]

# =============================================================================
# RUFF CONFIGURATION
# =============================================================================
# Ruff is an extremely fast Python linter and formatter, written in Rust.
# Docs: https://docs.astral.sh/ruff/

[tool.ruff]
# Target Python version (matches requires-python)
target-version = "py313"

# Line length - 88 is Black's default and widely adopted
line-length = 88

# Exclude directories from linting
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    "solutions",  # Reference implementations - don't lint
]

[tool.ruff.lint]
# Enable a comprehensive set of rules for strict linting
select = [
    # Core Python
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes (undefined names, unused imports, etc.)

    # Code quality
    "B",      # flake8-bugbear (common bugs and design problems)
    "C4",     # flake8-comprehensions (better list/dict/set comprehensions)
    "UP",     # pyupgrade (modern Python syntax)
    "SIM",    # flake8-simplify (simplify code)
    "RUF",    # ruff-specific rules

    # Imports
    "I",      # isort (import sorting)

    # Documentation
    "D",      # pydocstyle (docstring conventions)

    # Security
    "S",      # flake8-bandit (security issues)

    # Type annotations
    "ANN",    # flake8-annotations (type hint coverage)
    "TCH",    # flake8-type-checking (TYPE_CHECKING block optimization)

    # Naming
    "N",      # pep8-naming (naming conventions)

    # Error handling
    "TRY",    # tryceratops (exception handling anti-patterns)
    "EM",     # flake8-errmsg (exception message formatting)

    # Code structure
    "PIE",    # flake8-pie (misc. lints)
    "PT",     # flake8-pytest-style (pytest best practices)
    "RET",    # flake8-return (return statement issues)
    "ARG",    # flake8-unused-arguments
    "PL",     # pylint (subset of pylint rules)
]

# Rules to ignore (with explanations)
ignore = [
    # Allow TODO comments without issue links (practical for learning projects)
    "TD002",   # Missing author in TODO
    "TD003",   # Missing issue link in TODO

    # Sometimes we need broad exception handling
    "TRY003",  # Avoid specifying long messages outside exception class
    "EM101",   # Exception must not use string literal

    # These conflict with formatter or are too strict
    "D203",    # one-blank-line-before-class (conflicts with D211)
    "D213",    # multi-line-summary-second-line (conflicts with D212)

    # Allow assert in tests
    "S101",    # Use of assert detected
]

# Per-file rule ignores
[tool.ruff.lint.per-file-ignores]
# Test files don't need docstrings or full type annotations
"**/test_*.py" = ["D100", "D103", "D104", "ANN"]
"conftest.py" = ["D100", "D103", "ANN"]

# Main entry points and skeleton files can be simpler
"main.py" = ["D103"]
"bot.py" = ["D100", "D103", "ANN"]
"agent.py" = ["D100", "D103", "ANN"]
"graph.py" = ["D100", "D103", "ANN"]
"llm.py" = ["D100", "D103", "ANN"]
"utils.py" = ["D100", "D103", "ANN"]

# Tools are skeleton files for students
"tools/*.py" = ["D100", "D103", "ANN"]

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings
# Example:
#   def function(arg1: str, arg2: int) -> bool:
#       """Summary line.
#
#       Longer description if needed.
#
#       Args:
#           arg1: Description of arg1.
#           arg2: Description of arg2.
#
#       Returns:
#           Description of return value.
#
#       Raises:
#           ValueError: If something is wrong.
#       """
convention = "google"

[tool.ruff.lint.isort]
# Group imports: stdlib, third-party, first-party, local
known-first-party = ["tools", "utils", "agent", "graph", "llm"]

# Force single line imports for clarity
force-single-line = false

# Sort by import name, not alias
force-sort-within-sections = true

[tool.ruff.format]
# Use double quotes for strings (Black default)
quote-style = "double"

# Use spaces for indentation
indent-style = "space"

# Respect magic trailing commas (affects formatting of multi-line structures)
skip-magic-trailing-comma = false

# Auto-detect line endings
line-ending = "auto"

# Format docstrings
docstring-code-format = true

# =============================================================================
# TY CONFIGURATION
# =============================================================================
# ty is a fast Python type checker from the Astral team (makers of ruff/uv).
# Note: ty is very new (v0.0.x) - configuration options are evolving.
# Detailed config goes in ty.toml; pyproject.toml supports limited settings.
# Docs: https://github.com/astral-sh/ty

[tool.ty.environment]
# Python version to target (overrides auto-detection from requires-python)
python-version = "3.13"

[tool.ty.rules]
# Rule severity configuration
# ty rules use kebab-case names like "invalid-argument-type"
# Severity levels: "error" (default for most), "warn", or "ignore"
#
# Common rules (all enabled by default):
#   - invalid-argument-type: Wrong type passed to function
#   - unresolved-import: Cannot find imported module
#   - unresolved-attribute: Attribute doesn't exist on type
#   - invalid-assignment: Assigning wrong type to variable
#   - invalid-return-type: Return value doesn't match annotation
#
# Example customizations:
# invalid-argument-type = "warn"  # Downgrade to warning
# unresolved-import = "ignore"    # Disable (not recommended)

# =============================================================================
# PYTEST CONFIGURATION
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["solutions"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
